src/applications/edu-benefits/sass/edu-benefits.scss
// Variables

@import "~@department-of-veterans-affairs/formation/sass/shared-variables";
@import "~@department-of-veterans-affairs/formation/sass/modules/m-process-list";
@import "~@department-of-veterans-affairs/formation/sass/modules/m-form-process";
@import "~@department-of-veterans-affairs/formation/sass/modules/m-progress-bar";
@import "../../../platform/forms/sass/m-schemaform";
@import "~@department-of-veterans-affairs/formation/sass/modules/m-modal";
@import "~@department-of-veterans-affairs/formation/sass/modules/m-omb-info";
@import "../../../platform/forms/sass/m-form-confirmation";
@import "~@department-of-veterans-affairs/formation/sass/modules/va-pagination";


.form-checkbox > input[type="checkbox"] + .schemaform-label { // TODO: add > to .schemaform-first-field .schemaform-label, .schemaform-first-field > .usa-input-error in us-forms-system
  margin-top: 0;
}

// Privacy agreement?
.form-required-span {
  font-size: 1em;
  line-height: 0;
  position: relative;
}

.edu-benefits-alert {
  margin-bottom: 23px;
}

.edu-warning-single-line {
  margin-top: 0;
}

.edu-benefits-dependents-desc {
  margin-top: 5px;
}

.edu-dd-warning {
  margin-top: 3rem;
}

.row .edu-intro-spacing {
  margin-bottom: 7rem;
}

.search-results-count:focus, .schemaform-widget-wrapper textarea:focus {
  @include focus-gold-light-outline(0);
  outline-offset: 2px;
  z-index: 3;
}

.blue-bar-block {
  border-left: 7px solid $color-primary;
  padding-left: 1em;

  p {
    margin: 0.5em 0;
  }
}

.search-select-school-fieldset {
  .no-results-box {
    background-color: $color-gray-lightest;
    margin: 25px 0 0 0;
    padding: 20px;
    p {
      margin: 0;
    }
  }

  .school-search {
    margin-top: 0
  }

  .school-search-label {
    margin-top: 0
  }

  .search-controls {
    display: flex;
    flex-direction: column;
    .clear-search{
      display: flex;
    }
    .search-input {
      align-items: center;
      width: "100%";
      display: flex;
    }
    .search-schools-button {
      margin: 3px 0 0 15px;
      max-width: 150px;
      width: 100%;
    }
    .start-over {
      font-weight: normal
    }
  }

  .radio-button {
    span {
      display: inline-block;
      width: 100%;

      &.institution-name {
        color: $color-light-blue;
        font-weight: bold;
        text-decoration: underline;
      }
    }

    label {
      margin: 0;
      &::before {
        position: relative;
        top: 45px;
      }

      .institution-information {
        background-color: $color-gray-lightest;
        margin-left: 25px;
        padding: 10px 15px;
      }
    }
  }
}

// ReviewCardField styles
.review-card {
  .review-card--header {
    background-color: $color-gray-lightest;
    padding: 0 1rem;
    display: flex;
    justify-content: space-between;
    align-items: center;
    min-height: 5rem;

    .review-card--title {
      margin: 0;
      display: inline-block;
    }
  }

  .review-card--body {
    padding: 1.5rem;
    border: 2px solid $color-gray-lightest;
    // Remove the top border because it looks like it just extends the header
    border-top: none;
    margin-bottom: 1em;

    .review-card--title {
      margin: 1.5rem 0 2.5rem;
    }

    .update-button,
    .cancel-button {
      width: auto;
      margin: 0;
    }
  }

  .edit-button {
    width: auto;
    min-width: 8rem;
    margin-right: 0;
  }
}

.stem-eligibility {
  background-color: #f1f1f1;
  padding: 0.5em 1em;

  ul {
    margin-left: 1.5em;
    li {
      margin-bottom: 0;
    }
  }

  .explore-other-benefits {
    padding-top: 1em;
  }

  .explore-other-benefits-button {
    padding-top: 1em;
  }

}

.stem-eligibility-continue-application {
  padding-top: 2em;
}

